# minibee2osc

./: CMakeLists.txt  README.md  TODO.md  libxbee.kdev4
cmake/Modules/: FindLibXBee.cmake
gui/bee2osc_gui/: bee2osc_gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: MiniBee.h  MiniBeeAllocator.h  MiniBeeConfig.h  MiniBeeConfigFile.h  MiniHive.h  MiniHiveOSC.h  minibee_utils.h
include/osc/: oscin.h
programs/: CMakeLists.txt  main.cpp
sources/: CMakeLists.txt  MiniBee.cpp  MiniBee.h  MiniBeeAllocator.cpp  MiniBeeConfig.cpp  MiniBeeConfig.h  MiniBeeConfigFile.cpp  MiniHive.cpp  MiniHive.h  MiniHiveOSC.cpp  MiniHiveOSC.h  main.cpp  minibee_utils.cpp  minibee_utils.h
sources/osc/: lo_extensions.cpp  oscin.cpp  oscin.h
tests/supercollider/: osc_interface.scd
tests/xml/: CMakeLists.txt  example_hiveconfig.xml  xmlparsing.cpp  xmlsearching.cpp
